[PE] Add ToInt() for logical padding top and bottom for LayoutTableCell

This reverts the logic for logical top/bottom paddings to be the same
as before https://chromium-review.googlesource.com/619603. The logical
top/bottom paddings are truncated like what we do for other table
layouts.

We still keep subpixels for logical left/right paddings to ensure
correct logical width calculation. This is still the same as before
https://chromium-review.googlesource.com/619603.

Bug: 823824
Change-Id: Icb617bf5771d1726f767207853f4adc8275731dc
Reviewed-on: https://chromium-review.googlesource.com/974315
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Reviewed-by: David Grogan <dgrogan@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545225}
Former-commit-id: 80a959a1273c3f91bed6c9a1696312456f6a5b07